Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100713

Qt WebEngine: --disable-gpu does not disable GPU

XMLWordPrintable

      See attached screenshots and reports from chrome://gpu/

      When the --disable-gpu option is passed to the web engine, chrome://gpu/ reports that all hardware acceleration is disabled. However, when loading and scrolling a webpage,

      • Google Chrome 98.0.4758.82 truly does not use any GPU
      • Qt WebEngine still uses the GPU (tested with the Simple Browser example

      Notice that Qt WebEngine's copy of the report still contains --create-default-gl-context --use-gl=desktop  --in-process-gpu --gpu-preferences=... 

       

      Partial workaround

      Setting the environment variable QT_QUICK_BACKEND=software will properly disable the GPU. However, this requires sacrificing hardware acceleration in all Qt Quick code.

        1. gpu-report-qt6.html
          76 kB
          Sze Howe Koh
        2. disable-gpu-qt6.png
          183 kB
          Sze Howe Koh
        3. gpu-report-chrome.html
          211 kB
          Sze Howe Koh
        4. disable-gpu-chrome.png
          201 kB
          Sze Howe Koh
        5. gpu-report-qt5.html
          75 kB
          Sze Howe Koh
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes