Improve glType detection

Clean up the glType detection and do not set extra gl
related command parameters in case  command line arguments
have already '--disable-gpu'.

Task-number: QTBUG-100713
Change-Id: I5662a8c8fc64b38d483ed8349265f29f7ae0c5e4
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 97c1a232e6dd689b6149b3c9aae000138add755b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>